--- a/Normal.html
+++ b/Normal.html
@@ -16,11 +16,11 @@
 
 <body>
 
-   <h1 id="result">
+   <!-- <h1 id="result"> -->
    
-   abc
+   <!-- abc -->
    
-   </h1>
+   <!-- </h1> -->
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -42,8 +42,8 @@
 $(document).ready(function(){
 
 var result =  localStorage.getItem("Result");
-$('#result').html(result)
-
+// $('#result').html(result)
+$('body').html(result)
 })
 </script>
 </body>
