Show Form Result

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                         <div class="col-md-6 my-4">
                             <div class="stv-radio-buttons-wrapper">
                                 <input type="radio" class="stv-radio-button suporte-social" name="suporte-social"
-                                    value="alone" id="suporte-social-1" />
+                                    value="alone" id="suporte-social-1"  disabled="true"/>
                                 <label for="suporte-social-1">Alone</label>
                                 <input type="radio" class="stv-radio-button suporte-social" name="suporte-social"
                                     value="0.0" id="suporte-social-2" />
