Show Form Result Final

--- a/Moderate.html
+++ b/Moderate.html
@@ -43,7 +43,8 @@ $(document).ready(function(){
 
 var result =  localStorage.getItem("Result");
 // $('#result').html(result)
-$('body').html(result)
+$('body').html(result);
+$('input[type="radio"]').attr('disabled', true);
 })
 </script>
 </body>
