--- a/Severe.html
+++ b/Severe.html
@@ -45,6 +45,8 @@ var result =  localStorage.getItem("Result");
 //  $('#result').html(result)
 $('body').html(result);
 $('input[type="radio"]').attr('disabled', true);
+$("button#submit").css("display", "none");
+ $('.single-value').show();
 })
 </script>
 </body>
