New Formula Addition

--- a/Oldindex.html
+++ b/Oldindex.html
@@ -338,16 +338,16 @@
                         </div>
                         <div class="col-md-7 my-4">
                             <div class="stv-radio-buttons-wrapper">
-                                <input type="radio" class="stv-radio-button status-nutricional cognitive"
+                                <input type="radio" class="stv-radio-button status-nutricional"
                                     name="status-nutricional" value="0.0" id="status-nutricional-1" />
                                 <label for="status-nutricional-1">0-5</label>
-                                <input type="radio" class="stv-radio-button status-nutricional cognitive"
+                                <input type="radio" class="stv-radio-button status-nutricional"
                                     name="status-nutricional" value="2.0" id="status-nutricional-2" />
                                 <label for="status-nutricional-2">9-11</label>
-                                <input type="radio" class="stv-radio-button status-nutricional cognitive"
+                                <input type="radio" class="stv-radio-button status-nutricional"
                                     name="status-nutricional" value="3.0" id="status-nutricional-3" />
                                 <label for="status-nutricional-3">12-14</label>
-                                <input type="radio" class="stv-radio-button status-nutricional cognitive"
+                                <input type="radio" class="stv-radio-button status-nutricional"
                                     name="status-nutricional" value="4.0" id="status-nutricional-4" />
                                 <label for="status-nutricional-4">> 15</label>
                                 <p class="single-value">0.00</p>
